fixed: overlapping elements and footer styling

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -17,10 +17,6 @@ body {
     background-color: #252525;
 }
 
-.main {
-    padding-bottom: 300px;
-}
-
 
 
 
