--- a/front-end/src/Styles/InfoIcons.css
+++ b/front-end/src/Styles/InfoIcons.css
@@ -1,8 +1,3 @@
-body, html{
-  margin: 0px;
-  padding: 0px;
-}
-
 .info-icons-wrapper{
   /* background-color: rgb(229, 229, 229); */
   display: grid;
