--- a/front-end/src/Styles/previousCart.css
+++ b/front-end/src/Styles/previousCart.css
@@ -1,7 +1,3 @@
-.main {
-    padding-bottom: 80px;
-}
-
 .previous-order-container{
     text-align: center;
     border-radius: 15px;
@@ -9,7 +5,7 @@
     margin: 0 auto;
     margin-top: 5vh;
     padding: 30px;
-    background-color: rgba(245, 242, 237, 0.408);
+    background-color: rgb(34, 61, 148);
 }
 
 .previous-btn-container{
@@ -17,12 +13,11 @@
 }
 .previous-btn{
     margin-top: 50px;
-    background-color: rgb(91, 201, 203); /* Green */
+    background-color: rgb(34, 61, 148); 
     border: none;
     color: rgb(255, 255, 255);
     padding: 15px 32px;
     text-align: center;
-    /* height: 40px; */
     font-size: 16px;
     border-radius: 8px;
     transition-duration: 0.2s;
@@ -31,12 +26,11 @@
 
 
 .previous-btn button{
-    background-color:  rgb(34, 61, 148); /* Green */
+    background-color:  rgb(34, 61, 148);
     border: none;
     color: rgb(245, 230, 21);
     padding: 15px 32px;
     text-align: center;
-    /* height: 40px; */
     font-size: 16px;
     border-radius: 8px;
     transition-duration: 0.2s;
@@ -68,18 +62,18 @@
 
 
 @media only screen and (max-width: 600px){
+    
     .order-success-container{
         padding-top: 80px;
     }
     
     .previous-btn{
         margin-top: 50px;
-        background-color: rgb(91, 201, 203); /* Green */
+        background-color: rgb(91, 201, 203);
         border: none;
         color: rgb(255, 255, 255);
         padding: 15px 32px;
         text-align: center;
-        /* height: 40px; */
         font-size: 16px;
         border-radius: 8px;
         transition-duration: 0.2s;
@@ -98,7 +92,5 @@
         text-align: center;
       }
 
-      .main {
-        padding-bottom: 175px;
-    }
+
 }
